# pascalscript

./: .gitignore  01-hello.pas  03-array.pas  CMakeLists-TRY.txt  CMakeLists.txt  LICENSE  Makefile  Makefile.OLD  README.md  error.c  error.h  free-pascal.ebnf  lex.l  lexer.c  lexer.h  pascalscript.c  pascalscript.ebnf  pascalscript.g4  pascalscript.l  pascalscript.lex.c  pascalscript.output  pascalscript.tab.c  pascalscript.tab.h  pascalscript.y  pascalscript_lexer.g4  pascalscript_parser.g4  pascalscript_parser_v0.g4  test-examples.sh  test-tests.sh  test.sh  toto.txt  yacc.y
.antlr/: pascalscript_lexer.interp  pascalscript_lexer.java  pascalscript_parser.interp  pascalscript_parser.tokens  pascalscript_parserBaseListener.java  pascalscript_parserListener.java  pascalscript_parserParser.java
.github/workflows/: cmake-multi-platform.yml
antlr/: pascalscript_lexer.g4  pascalscript_lexer_v0.g4  pascalscript_parser.g4  pascalscript_parser_v0.g4
calc/: calc.c  calc.tab.c  calc.tab.h
calc1/: calc.l  calc.y  lex.yy.c
calc2/: build.sh  calc  calc.l  calc.lex.c  calc.tab.c  calc.tab.h  calc.y  calc.y.c
doc/: git-copyright.md  keywords.md
examples/: 00-0minimal.pas  00-2hello.pas  00-hello.pas  00-hello1.pas  00-hello2.pas  00-minimal.pas  00-test-expr.pas  000-minimal.pas  001-hello.pas  002-strings.pas  002-test-expr1.pas  003-hello2.pas  004-test-expr.pas  005-first.pas  005-strings.pas  006-second.pas  007-strings.pas  007-strings1.pas  007-strings2.pas  01-first.pas  010-operators.pas  015-function-in-writeln.pas  02-second  02-second.pas  022-repeat-until-real.pas  03-if-then-else.pas  030-array.pas  030-array0.pas  030-if-then-else.pas  031-array1.pas  032-array2.pas  033-array3.pas  034-array4.pas  04-repeat-until-real.pas  04-repeat-until.pas  040-repeat-until.pas  045-repeat-until-real.pas  05-while-do.pas  050-while-do.pas  06-for-do.pas  (+55 more)
examples/fpc/: example43.pas  example45.pas  test_fp_power  test_fp_power.pas  test_fp_strings.pas  test_fp_subrange_enum.pas  test_scopes.pas
include/: ps_array.h  ps_ast.h  ps_ast_debug.h  ps_ast_execute.h  ps_ast_test.h  ps_buffer.h  ps_compile.h  ps_compiler.h  ps_config.h  ps_debug.h  ps_enum.h  ps_environment.h  ps_error.h  ps_executable.h  ps_file.h  ps_functions.h  ps_interpreter.h  ps_lexer.h  ps_logger.h  ps_memory.h  ps_operator.h  ps_parameters.c  ps_parameters.h  ps_parse.h  ps_parse_declaration.h  ps_parse_executable.h  ps_parse_expression.h  ps_parse_statement.h  ps_parse_type.h  ps_parser.h  ps_procedures.h  ps_readall.h  ps_runtime.h  ps_signature.h  ps_source.h  ps_stack.h  ps_stdlib.h  ps_string.h  ps_string_heap.h  ps_subrange.h  (+20 more)
include/experiments/: ps_ast.h  ps_hashtable.h  ps_string.h  ps_symbol_stack.h  ps_value_stack-old.h  ps_value_stack.h  ps_vm.h  ps_vm_operator.h
include/visit/: ps_visit.h
src/: Makefile  build.sh  error.c  error.h  free-pascal-ebnf.md  global_table.c  global_table.h  keywords.c  keywords.h  lexer.c  lexer.h  operator.c  operator.h  parser.c  pascalscript.c  pascalscript.h  pascalscript.l  pascalscript.lex.c  pascalscript.output  pascalscript.tab.c  pascalscript.tab.h  pascalscript.y  ps_array.c  ps_ast.c  ps_ast_debug.c  ps_ast_execute.c  ps_ast_test.c  ps_buffer.c  ps_compile.c  ps_compiler.c  ps_config.c  ps_enum.c  ps_environment.c  ps_error.c  ps_executable.c  ps_functions.c  ps_interpreter.c  ps_lexer.c  ps_logger.c  ps_memory.c  (+59 more)
src/experiments/: ps_ast.c  ps_string.c  ps_string_heap.c  ps_symbol_stack.c  ps_value_stack.c  ps_visitor.c  ps_vm.c  ps_vm_exec.c  ps_vm_globals.c  ps_vm_operator.c  ps_vm_stack.c  trash.c
src/visit/: ps_parse_type.c  ps_visit_declaration.c  ps_visit_statement.c  ps_visit_type.c
test/: CMakeLists.txt  Makefile  test  test_10_buffer.c  test_10_buffer.pas  test_20_lexer.c  test_30_string.c  test_40_value.c  test_60_symbol_table.c  test_buffer.c  test_buffer.sh  test_global_table.c  test_global_table.sh  test_lexer  test_lexer.c  test_lexer.sh  test_string.c  test_string.sh  test_symbol_stack.c  test_symbol_stack.sh  test_symbol_table.c  test_symbol_table.sh  test_value.c  test_value.sh  test_vm_00  test_vm_00.c  test_vm_01_assign.c  test_vm_01_assign.sh  test_vm_02_unary.c  test_vm_02_unary.sh  test_vm_03_binary.c  test_vm_03_binary.sh
test/experiments/: test_symbol_stack.c  test_vm_00.c  test_vm_00.sh  test_vm_01_assign.c  test_vm_01_assign.sh  test_vm_02_unary.c  test_vm_03_binary.c  test_vm_03_binary.sh
